Added the Forge as a git submodule
Moved many generic classes and methods into the Forge, including all
Utils methods and the Logger and RoundedPanel classes.